--- a/RAG_Gemini.ipynb
+++ b/RAG_Gemini.ipynb
@@ -781,9 +781,9 @@
     "import os\n",
     "\n",
     "if \"GOOGLE_API_KEY\" not in os.environ:\n",
-    "    os.environ[\"GOOGLE_API_KEY\"] = getpass.getpass(\"AIzaSyDMJrAz1iLM17kS6k6VPcphszbAksEDGk0\")\n",
+    "    os.environ[\"GOOGLE_API_KEY\"] = getpass.getpass(\"\")\n",
     "\n",
-    "llm = ChatGoogleGenerativeAI(model=\"gemini-pro\",google_api_key=\"AIzaSyDMJrAz1iLM17kS6k6VPcphszbAksEDGk0\",convert_system_message_to_human=True)\n",
+    "llm = ChatGoogleGenerativeAI(model=\"gemini-pro\",google_api_key=\"\",convert_system_message_to_human=True)\n",
     "result = llm.invoke(\"Write a ballad about LangChain\")\n",
     "print(result.content)"
    ]
